--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
     <header>
       <h1>SCSS</h1>
       <h3>Scopri di più sul nostro linguaggio!</h3>
-      <button>Scopri di più</button>
-      <button>Accedi</button>
-      <button>Contattaci</button>
+      <button class="button-bg-1">Scopri di più</button>
+      <button class="button-bg-2">Accedi</button>
+      <button class="button-bg-3">Contattaci</button>
     </header>
   </body>
 </html>
