--- a/index.html
+++ b/index.html
@@ -24,7 +24,12 @@
     <main>
       <div class="container">
         <div class="flex">
-          <div class="img-container"><img src=" width="100%" /></div>
+          <div class="img-container">
+            <img
+              src="https://images.unsplash.com/photo-1698252687043-f22f8d0b8a06?auto=format&fit=crop&q=80&w=1974&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+              width="100%"
+            />
+          </div>
           <div class="img-container">
             <img
               src="https://images.unsplash.com/photo-1698252687043-f22f8d0b8a06?auto=format&fit=crop&q=80&w=1974&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
